--- a/modelTest/mTest.html
+++ b/modelTest/mTest.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>modelTest</title>
-    <link rel="stylesheet" href="./mTest.css">
+    <link rel="stylesheet" href="./other/mTest.css">
 </head>
 <body>
-    <script src="./mTest.js" type="module"></script>
+    <script src="./other/mTest.js" type="module"></script>
 </body>
 </html>
