--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div id="hud">
-        <div id="hud-team">
-          <h2>Aucune équipe sélectionnée...</h2>
-        </div>
-    </div>
-    <div id="toggleHUD">
-        <h4 id="hudToggleButton">Cacher le HUD</h4>
-    </div>
+    <div id="insaContainer"></div>
+        <container id="theFlex">
+        <container id="bureauContainer">
+            <p>Bureau</p>
+        </container>
+        <container id="sceneContainer">
+            <div id="canvas">
+                <!-- <div id="hud">
+                    <div id="hud-team">
+                      <h2>Aucune équipe sélectionnée...</h2>
+                    </div>
+                </div>
+                <div id="toggleHUD">
+                    <h4 id="hudToggleButton">Cacher le HUD</h4>
+                </div> -->
+            </div>
+        </container>
+    </container>
     <script src="./js/scripts.js" type="module"></script>
 </body>
 </html>
