--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div id="insaContainer"></div>
+    <div id="insaContainer">
+        <img id="insaLogo" src="./medias/insa-logo.svg"/>
+    </div>
         <container id="theFlex">
         <container id="bureauContainer">
             <p>Bureau</p>
