--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="hud">
         <div id="hud-team">
-          <h2>Aucune équipe sélectionnée...</h2>
+          <h2 id="which-team">Aucune équipe sélectionnée...</h2>
         </div>
     </div>
     <div id="toggleHUD">
