init the sections div

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <div id="insaContainer">
         <img id="insaLogo" src="./medias/insa-logo.svg"/>
+        <div id="map"></div>
     </div>
         <container id="theFlex">
         <container id="bureauContainer">
-            <p>Bureau</p>
+            <header>Le bureau</header>
+            <div id="planning"></div>
+            <div id="blouse"></div>
+            <div id="guide-ppa"></div>
+            <div id="prevention"></div>
+            <div id="parrainage"></div>
         </container>
         <container id="sceneContainer">
             <div id="canvas">
