--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </div>
         <container id="theFlex">
         <container id="bureauContainer">
-            <header>Le bureau</header>
+            <header id="bureau-header">
+                <h2>Le bureau</h2>
+            </header>
             <div id="planning"></div>
             <div id="blouse"></div>
             <div id="guide-ppa"></div>
