--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <div id="sceneContainer"></div>
     <div id="hud">
         <div id="hud-team">
           <h2 id="which-team">Aucune équipe sélectionnée...</h2>
