--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
             <div id="parrainage"></div>
         </container>
         <container id="sceneContainer">
-            <div id="canvas">
-                <!-- <div id="hud">
-                    <div id="hud-team">
-                      <h2>Aucune équipe sélectionnée...</h2>
-                    </div>
+            <!-- <div id="hud">
+                <div id="hud-team">
+                    <h2 id="which-team">Aucune équipe sélectionnée...</h2>
                 </div>
-                <div id="toggleHUD">
-                    <h4 id="hudToggleButton">Cacher le HUD</h4>
-                </div> -->
             </div>
+            <div id="toggleHUD">
+                <h4 id="hudToggleButton">Cacher le HUD</h4>
+            </div> -->
         </container>
     </container>
     <script src="./js/scripts.js" type="module"></script>
