Resize + logo file

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div id="insaContainer">
+    <!-- <div id="insaContainer">
         <img id="insaLogo" src="./medias/insa-logo.svg"/>
         <div id="map"></div>
-    </div>
-        <container id="theFlex">
+    </div> -->
+    <container id="theFlex">
         <container id="bureauContainer">
             <header id="bureau-header">
+                <img id="imgBureau" scr="./medias/bureauBigLogo.svg"/>
                 <h2>Le bureau</h2>
             </header>
             <div id="planning"></div>
