trying show bureau Logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <container id="theFlex">
         <container id="bureauContainer">
             <header id="bureau-header">
-                <img id="imgBureau" scr="./medias/bureauBigLogo.svg"/>
+                <img id="bureauLogoBig" scr="./medias/bureauBigLogo.svg"/>
                 <h2>Le bureau</h2>
             </header>
             <div id="planning"></div>
