--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>insat</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -12,10 +12,10 @@
         <img id="insaLogo" src="./medias/insa-logo.svg"/>
         <div id="map"></div>
     </div> -->
-    <container id="theFlex">
-        <container id="bureauContainer">
+    <div id="theFlex">
+        <div id="bureauContainer">
             <header id="bureau-header">
-                <img id="bureauLogoBig" scr="./medias/bureauBigLogo.svg"/>
+                <img id="bureauLogoBig" src="./medias/logo-bureau.png"/>
                 <h2>Le bureau</h2>
             </header>
             <div id="planning"></div>
@@ -23,8 +23,8 @@
             <div id="guide-ppa"></div>
             <div id="prevention"></div>
             <div id="parrainage"></div>
-        </container>
-        <container id="sceneContainer">
+        </div>
+        <div id="sceneContainer">
             <!-- <div id="hud">
                 <div id="hud-team">
                     <h2 id="which-team">Aucune équipe sélectionnée...</h2>
@@ -33,8 +33,8 @@
             <div id="toggleHUD">
                 <h4 id="hudToggleButton">Cacher le HUD</h4>
             </div> -->
-        </container>
-    </container>
+        </div>
+    </div>
     <script src="./js/scripts.js" type="module"></script>
 </body>
 </html>
