--- a/index.html
+++ b/index.html
@@ -25,14 +25,7 @@
             <div id="parrainage"></div>
         </div>
         <div id="sceneContainer">
-            <!-- <div id="hud">
-                <div id="hud-team">
-                    <h2 id="which-team">Aucune équipe sélectionnée...</h2>
-                </div>
-            </div>
-            <div id="toggleHUD">
-                <h4 id="hudToggleButton">Cacher le HUD</h4>
-            </div> -->
+            <div id="team"><img id="team-logo" src="./medias/greks.svg"/></div>
         </div>
     </div>
     <script src="./js/scripts.js" type="module"></script>
