svg + logo select

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="theFlex">
         <div id="bureauContainer">
             <header id="bureau-header">
-                <img id="bureauLogoBig"/>
+                <img id="bureauLogoBig" src="./medias/logo-bureau.svg"/>
                 <h2>Le bureau</h2>
             </header>
             <div id="planning"></div>
@@ -25,7 +25,7 @@
             <div id="parrainage"></div>
         </div>
         <div id="sceneContainer">
-            <div id="team"><img id="team-logo"/></div>
+            <div id="team"><img id="team-logo" class="no-show"/></div>
         </div>
     </div>
     <script src="./js/scripts.js" type="module"></script>
