--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
                 <img id="bureauLogoBig" src="./medias/logo-bureau.svg"/>
                 <h2>Le bureau</h2>
             </header>
-            <div id="planning"></div>
-            <div id="blouse"></div>
-            <div id="guide-ppa"></div>
-            <div id="prevention"></div>
-            <div id="parrainage"></div>
+            <div id="menu">
+                <div id="planning">Planning</div>
+                <div id="blouse">Blouse</div>
+                <div id="guide-ppa">Guide</div>
+                <div id="prevention">Prev</div>
+                <div id="parrainage">Parrainage</div>
+            </div>
         </div>
         <div id="sceneContainer">
             <div id="team"><img id="team-logo" class="no-show"/></div>
