--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <h2>Le bureau</h2>
             </header>
             <div id="menu">
-                <div id="planning">Planning</div>
-                <div id="blouse">Blouse</div>
-                <div id="guide-ppa">Guide</div>
-                <div id="prevention">Prev</div>
-                <div id="parrainage">Parrainage</div>
+                <div id="planning" class="cat-menu">Planning</div>
+                <div id="blouse" class="cat-menu">Blouse</div>
+                <div id="guide-ppa" class="cat-menu">Guide</div>
+                <div id="prevention" class="cat-menu">Prev</div>
+                <div id="parrainage" class="cat-menu">Parrainage</div>
             </div>
         </div>
         <div id="sceneContainer">
