--- a/info.html
+++ b/info.html
@@ -10,8 +10,8 @@
 
 <body>
     <div id="home">
-        
-    </div>
-</body>
 
+    </div>
+    <script src="./js/info.js" type="module"></script>
+</body>
 </html>
