--- a/info.html
+++ b/info.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>insat-info</title>
-    <link rel="stylesheet" href="./css/info.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <div id="home">
+    <div id="info-top">
 
     </div>
-    <script src="./js/info.js" type="module"></script>
+    <script src="./js/scripts.js" type="module"></script>
 </body>
 </html>
