--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>insat</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">    
 </head>
 <body>
-    <!-- <div id="insaContainer">
-        <img id="insaLogo" src="./medias/insa-logo.svg"/>
-        <div id="map"></div>
-    </div> -->
-    <div id="theFlex">
-        <div id="bureauContainer">
+    <div id="home-flex">
+        <div id="bureau-container">
             <header id="bureau-header">
-                <img id="bureauLogoBig" src="./medias/logo-bureau.svg"/>
-                <h2>Le bureau</h2>
+                <img id="" src="./medias/logo-bureau.svg"/>
+                <h1 class ="pf-d-bureau-title">Le bureau</h1>
             </header>
             <div id="menu">
-                <div id="planning" class="cat-menu">Planning</div>
-                <div id="blouse" class="cat-menu">Blouse</div>
-                <div id="guide-ppa" class="cat-menu">Guide</div>
-                <div id="prevention" class="cat-menu">Prev</div>
-                <div id="parrainage" class="cat-menu">Parrainage</div>
+                <div id="planning" class="menu-item"><h4 class="lato-regular">Au planning</h4></div>
+                <div id="blouse" class="menu-item"><h4 class="lato-regular">La blouse</h4></div>
+                <div id="guide-ppa" class="menu-item"><h4 class="lato-regular">Le guide du PPA</h4></div>
+                <div id="prevention" class="menu-item"><h4 class="lato-regular">La prev'</h4></div>
+                <div id="parrainage" class="menu-item"><h4 class="lato-regular">Le parrainage</h4></div>
             </div>
         </div>
-        <div id="sceneContainer">
+        <div id="scene-container">
             <div id="team"><img id="team-logo" class="no-show"/></div>
+            <div id="full-screen"><img id="fs-img"/></div>
         </div>
     </div>
     <script src="./js/scripts.js" type="module"></script>
