--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">    
 </head>
-<body>
+<body style="overflow: hidden;">
     <div id="home-flex">
         <div id="bureau-container">
             <header id="bureau-header">
-                <img id="" src="./medias/logo-bureau.svg"/>
+                <img src="./medias/logo-bureau.svg"/>
                 <h1 class ="pf-d-bureau-title">Le bureau</h1>
             </header>
             <div id="menu">
