--- a/info.html
+++ b/info.html
@@ -10,7 +10,15 @@
 
 <body>
     <div id="info-top">
-
+        <img class="it-logo" src="./medias/logo-bureau.svg"/>
+        <img id="cross-img" src="./medias/cross.svg"/>
+        <img class ="it-logo" src="./medias/insa-logo.svg"/>
+        <img id="down-arrow" src="./medias/down-arrow.svg"/>
+    </div>
+    <div id="info-mid">
+        <div>
+            <p>Vous voyez ?</p>
+        </div>
     </div>
     <script src="./js/scripts.js" type="module"></script>
 </body>
