--- a/info.html
+++ b/info.html
@@ -13,8 +13,8 @@
         <img class="it-logo" src="./medias/logo-bureau.svg"/>
         <img id="cross-img" src="./medias/cross.svg"/>
         <img class ="it-logo" src="./medias/insa-logo.svg"/>
-        <img id="down-arrow" src="./medias/down-arrow.svg"/>
     </div>
+    <div id="junction"><img id="down-arrow" src="./medias/down-arrow.svg"/></div>
     <div id="info-mid">
         <div>
             <p>Vous voyez ?</p>
