--- a/info.html
+++ b/info.html
@@ -10,10 +10,13 @@
 
 <body>
     <div id="info-top">
-        <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/>
+        <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
+        <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
         <img id="cross-img" src="./medias/cross.svg"/>
-        <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/>
-        <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/>
+        <img id="it-insa" class="it-logo" src="./medias/insa-logo.svg"/>
+        <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
+        <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
+        <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
     </div>
     <div id="junction"><img id="down-arrow" src="./medias/down-arrow.svg"/></div>
     <div id="info-mid">
