--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="ss-equipe main">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">    
+    <script src="./js/scripts.js" type="module" defer></script>
 </head>
 <body style="overflow: hidden;">
     <div id="home-flex">
@@ -26,10 +27,87 @@
             </div>
         </div>
         <div id="scene-container">
-            <div id="team"><img id="team-logo" class="no-show"/></div>
+            <div id="team" class="team-border"><img id="team-logo" /></div>
             <div id="full-screen"><img id="fs-img"/></div>
         </div>
     </div>
-    <script src="./js/scripts.js" type="module"></script>
+    <div id="info">
+        <div id="planning">
+            <div id="info-top">
+                <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
+                <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
+                <img id="cross-img" src="./medias/cross.svg"/>
+                <img id="it-insa" class="it-logo" src="./medias/insa-logo.svg"/>
+                <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
+                <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
+                <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
+            </div>
+            <div id="junction">
+                <img id="down-arrow" src="./medias/down-arrow.svg"/>
+            </div>
+            <div id="info-mid">
+                <div>
+                    <p>Vous voyez ?</p>
+                </div>
+            </div>
+        </div>
+        <div id="blouse">
+            <div id="info-top">
+                <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
+                <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
+                <img id="cross-img" src="./medias/cross.svg"/>
+                <img id="it-insa" class="it-logo" src="./medias/insa-logo.svg"/>
+                <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
+                <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
+                <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
+            </div>
+            <div id="junction">
+                <img id="down-arrow" src="./medias/down-arrow.svg"/>
+            </div>
+            <div id="info-mid">
+                <div>
+                    <p>Vous voyez ?</p>
+                </div>
+            </div>
+        </div>
+        <div id="guide-ppa">
+            <div id="info-top">
+                <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
+                <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
+                <img id="cross-img" src="./medias/cross.svg"/>
+                <img id="it-insa" class="it-logo" src="./medias/insa-logo.svg"/>
+                <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
+                <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
+                <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
+            </div>
+            <div id="junction">
+                <img id="down-arrow" src="./medias/down-arrow.svg"/>
+            </div>
+            <div id="info-mid">
+                <div>
+                    <p>Vous voyez ?</p>
+                </div>
+            </div>
+        </div>
+        <div id="preventions">
+            <div id="info-top">
+                <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
+                <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
+                <img id="cross-img" src="./medias/cross.svg"/>
+                <img id="it-insa" class="it-logo" src="./medias/insa-logo.svg"/>
+                <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
+                <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
+                <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
+            </div>
+            <div id="junction">
+                <img id="down-arrow" src="./medias/down-arrow.svg"/>
+            </div>
+            <div id="info-mid">
+                <div>
+                    <p>Vous voyez ?</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
