--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div id="info">
-        <div id="planning">
+        <div id="info-planning">
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
                 <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <div id="blouse">
+        <div id="info-blouse">
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
                 <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div id="guide-ppa">
+        <div id="info-guide-ppa">
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
                 <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div id="preventions">
+        <div id="info-prevention">
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
                 <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
