logo en fonction de cookie - class size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div id="scene-container">
-            <div id="team" class="team-border"><img id="team-logo" /></div>
+            <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
             <div id="full-screen"><img id="fs-img"/></div>
         </div>
     </div>
