--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">    
     <script src="./js/scripts.js" type="module" defer></script>
 </head>
-<body style="overflow: hidden;">
+<body>
     <div id="home-flex">
         <div id="bureau-container">
             <header id="bureau-header">
