prev + planning + full-screen

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </div>
         <div id="scene-container">
             <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
-            <div id="full-screen"><img id="fs-img"/></div>
+            <div id="full-screen"><img id="fs-img" src="./medias/fullscreen.svg"/></div>
         </div>
     </div>
     <div id="info">
         <div id="info-planning">
             <img id="back-arrow" src="./medias/back.svg"/>
             <div id="ba-tip">
-                <span id="tip-text" class="pf-d-tip">Home</span>
+                <span id="tip-text" class="chokokutai-regular">Home</span>
             </div>
             <div id="info-top">
                 <img id="it-bureau" class="it-logo" src="./medias/logo-bureau.svg"/>
@@ -46,8 +46,11 @@
                 <img id="down-arrow" src="./medias/down-arrow.svg"/>
             </div>
             <div id="info-mid">
-                <div>
-                    <p>Vous voyez ?</p>
+                <div id="corpus-title">
+                    <span id="title-content" class="chokokutai-regular">Au planning ...</span>
+                </div>
+                <div id="plan-img-container">
+                    <img id="planning-img" src="./medias/planning.jpeg">
                 </div>
             </div>
         </div>
@@ -92,23 +95,24 @@
         <div id="info-prevention">
             <img id="back-arrow-4" src="./medias/back.svg"/>
             <div id="ba-tip">
-                <span id="tip-text" class="pf-d-tip">Home</span>
+                <span id="tip-text" class="chokokutai-regular">Home</span>
             </div>
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
-                <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
                 <img id="cross-img" src="./medias/cross.svg"/>
                 <img id="it-prev" class="it-logo" src="./medias/Com_Prev_v2.svg"/>
-                <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
-                <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
-                <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
             </div>
             <div id="junction">
                 <img id="down-arrow" onclick="document.getElementById('info-mid-4').scrollIntoView();" src="./medias/down-arrow.svg"/>
             </div>
             <div id="info-mid-4">
-                <div>
-                    <p>Vous voyez ?</p>
+                <div id="corpus-title">
+                    <span id="title-content" class="chokokutai-regular">Un message de la Com'Prev</span>
+                </div>
+                <div id="corpus">
+                    <span id="corpus-content" class="lato-bold">
+                        "Bien le bonjour jeune PPA ! Nous sommes la Com’Prev, toujours présents pour soigner la moindre de tes blessures et pour assurer ta sécurité dans l’arène et en dehors, à tout moment. Que ce soit pour une cheville foulée, un coude écorché, des inquiétudes, un problème à signaler, tu peux (et dois) venir nous voir pour récupérer toute ta vigueur et passer une super semaine ! Tous les membres de la Com’Prev porteront un T-Shirt rouge en signe de reconnaissance. Si tu es victime ou témoin d’agression ou de Violences Sexistes et Sexuelles (VSS), nous t’encourageons à venir nous en parler pendant la semaine. Nous œuvrerons durant toute la semaine pour que tu puisses t’éclater sans danger et garder de super souvenirs. Hâte de te voir enfin rentrer dans l’arène des civilisations antiques !"
+                    </span>
                 </div>
             </div>
         </div>
