--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
                 <img id="cross-img" src="./medias/cross.svg"/>
-                <img id="it-prev" class="it-logo" src="./medias/Com_Prev_v2.svg"/>
+                <img id="it-prev" class="it-logo" src="./medias/com-prev-v2.svg"/>
             </div>
             <div id="junction">
                 <img id="down-arrow" onclick="document.getElementById('info-mid-4').scrollIntoView();" src="./medias/down-arrow.svg"/>
