Logo by html class

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <div id="prevention" class="menu-item"><h4 class="chokokutai-regular">La Com'Prev</h4></div>
                 <div id="parrainage" class="menu-item"><h4 class="chokokutai-regular">Le parrainage</h4></div>
             </div>
+            <div id="no-team">
+                <span id="no-t-text" class="chokokutai-regular">Sélectionnez votre équipe !</span>
+            </div>
         </div>
         <div id="scene-container">
             <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
@@ -57,12 +60,11 @@
         <div id="info-blouse">
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
-                <!-- <img id="it-bureau"class="it-logo no-show" src="./medias/logo-bureau.svg"/> -->
                 <img id="cross-img" src="./medias/cross.svg"/>
-                <img id="it-insa" class="it-logo" src="./medias/insa-logo.svg"/>
-                <!-- <img id="it-insa" class="it-logo no-show" src="./medias/insa-logo.svg"/> -->
-                <!-- <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/> -->
-                <!-- <img id="it-amicale" class="it-logo no-show" src="./medias/amicale.png"/> -->
+                <img id="it-vik" class="it-logo" src="./medias/vikn.svg"/>
+                <img id="it-grec" class="it-logo" src="./medias/greksn.svg"/>
+                <img id="it-inka" class="it-logo" src="./medias/inkasn.svg"/>
+                <img id="it-sam" class="it-logo" src="./medias/samn.svg"/>
             </div>
             <div id="junction">
                 <img id="down-arrow" src="./medias/down-arrow.svg"/>
