--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             </div>
         </div>
         <div id="info-blouse">
+            <img id="back-arrow-2" src="./medias/back.svg"/>
+            <div id="ba-tip">
+                <span id="tip-text" class="chokokutai-regular">Home</span>
+            </div>
             <div id="info-top">
                 <img id="it-bureau"class="it-logo" src="./medias/logo-bureau.svg"/>
                 <img id="cross-img" src="./medias/cross.svg"/>
