--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div id="info-mid">
                 <div id="corpus-title">
-                    <span id="title-content" class="chokokutai-regular">Au planning ...</span>
+                    <span class="title-content chokokutai-regular">Au planning ...</span>
                 </div>
                 <div id="plan-img-container">
                     <img id="planning-img" src="./medias/planning.jpeg">
@@ -74,8 +74,29 @@
                 <img id="down-arrow" src="./medias/down-arrow.svg"/>
             </div>
             <div id="info-mid">
-                <div>
-                    <p>Vous voyez ?</p>
+                <div id="corpus-title">
+                    <span class="title-content chokokutai-regular">C'est quoi la blouse ?</span>
+                </div>
+                <div id="corpus">
+                    <span class="lato-bold corpus-content">Vaillant·e élu·e,</span>
+                    <span class="lato-bold corpus-content">Tu fais désormais partie du peuple des Insaïens. À ce titre, tu te dois de respecter les codes ancestraux transmis de promo en promo, du Parthénon de la place Saint Pierre jusqu’aux fjords numériques de la Salle TP 12.</span>
+                    <span class="lato-bold corpus-content">Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé : $cookie . L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>
+                    <span class="lato-bold corpus-content">En cette glorieuse année 2025, tu as choisi de rejoindre les rangs d’une grande lignée : celle des bâtisseurs de savoir et des guerrier·ère·s du tissu, à l'image de tes aînés.</span>  
+                    <span class="lato-bold corpus-content">Durant cette semaine épique des civilisations, ta blouse sera ton armure, ton étendard, ton manuscrit sacré ! Elle te sera précieuse non seulement lors des rituels de TP, mais elle révèlera au monde entier le·la fier·e Ambassadeur·drice de ta civilisation que tu es (et que tu porteras avec fierté du matin jusqu’à la tombée du soleil).</span>
+                    <br>
+                    <span class="title-content chokokutai-regular">Les Tables de Loi de la Blouse</span>
+                    <br><br>
+                    <span class="lato-bold-italic corpus-content">• Fil et aiguille, seuls outils légitimes seront.</span>
+                    <span class="lato-bold-italic corpus-content">• Par ta seule main cette tâche tu accompliras — ni mère ni aïeule tu n’invoqueras. Le rite est personnel. Courage, jeune initié·e !</span>
+                    <span class="lato-bold-italic corpus-content">• Marqueurs et feutres, tabous ils sont (ne pas les utiliser). Ces instruments appartiennent aux Érudits de l'Évaluation (tes ainés), qui béniront ou maudiront ta création selon les coutumes.</span>
+                    <span class="lato-bold-italic corpus-content">• Ta blouse devra être une œuvre d’art unique, inspirée des mythes et symboles de ta civilisation. Recopie n’est pas honneur : imagine, réinvente, crée.</span>
+                    <span class="lato-bold-italic corpus-content">• Sur le devant, doivent paraître ton prénom, le blason de ton peuple (ou de ta ville) et son nom antique. Au dos, grave ton surnom avec grandeur et “INSA 63” en lettres dignes d’un monument.</span>
+                    <span class="lato-bold-italic corpus-content">• Manches, poches, recoins : rien ne doit rester vierge. Broderies, motifs tribaux, armes mythiques, dieux, dragons ou plumes sacrées : tout ce qui évoque ta civilisation est bienvenu. L’humour, lui, est récompensé par les Dieux et les Anciens.</span>
+                    <br>
+                    <span class="title-content chokokutai-regular">Gloire à celles et ceux qui créent !</span>
+                    <br><br>
+                    <span class="lato-bold corpus-content">Un exemple de chef-d’œuvre t’attend si tu veux t’inspirer... mais souviens-toi : les héros ne copient pas, ils laissent leur légende s’écrire à la pointe de l’aiguille.</span>
+                    <span class="lato-bold corpus-content">Prépare-toi, fier·e Insaïen·ne. Que ta blouse raconte ton épopée !</span>
                 </div>
             </div>
         </div>
@@ -113,10 +134,10 @@
             </div>
             <div id="info-mid-4">
                 <div id="corpus-title">
-                    <span id="title-content" class="chokokutai-regular">Un message de la Com'Prev</span>
+                    <span class="title-content chokokutai-regular">Un manuscrit de la Com'Prev :</span>
                 </div>
                 <div id="corpus">
-                    <span id="corpus-content" class="lato-bold">
+                    <span class="lato-bold corpus-content">
                         "Bien le bonjour jeune PPA ! Nous sommes la Com’Prev, toujours présents pour soigner la moindre de tes blessures et pour assurer ta sécurité dans l’arène et en dehors, à tout moment. Que ce soit pour une cheville foulée, un coude écorché, des inquiétudes, un problème à signaler, tu peux (et dois) venir nous voir pour récupérer toute ta vigueur et passer une super semaine ! Tous les membres de la Com’Prev porteront un T-Shirt rouge en signe de reconnaissance. Si tu es victime ou témoin d’agression ou de Violences Sexistes et Sexuelles (VSS), nous t’encourageons à venir nous en parler pendant la semaine. Nous œuvrerons durant toute la semaine pour que tu puisses t’éclater sans danger et garder de super souvenirs. Hâte de te voir enfin rentrer dans l’arène des civilisations antiques !"
                     </span>
                 </div>
