blouse background prep

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img id="it-amicale" class="it-logo" src="./medias/amicale.png"/>
             </div>
             <div id="junction">
-                <img id="down-arrow" src="./medias/down-arrow.svg"/>
+                <img id="down-arrow" onclick="document.getElementById('info-mid').scrollIntoView();" src="./medias/down-arrow.svg"/>
             </div>
             <div id="info-mid">
                 <div id="corpus-title">
@@ -71,9 +71,9 @@
                 <img id="it-sam" class="it-logo" src="./medias/samn.svg"/>
             </div>
             <div id="junction">
-                <img id="down-arrow" src="./medias/down-arrow.svg"/>
+                <img id="down-arrow" onclick="document.getElementById('info-mid-2').scrollIntoView();" src="./medias/down-arrow.svg"/>
             </div>
-            <div id="info-mid">
+            <div id="info-mid-2">
                 <div id="corpus-title">
                     <span class="title-content chokokutai-regular">C'est quoi la blouse ?</span>
                 </div>
