--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chokokutai&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <script src="./js/scripts.js" type="module" defer></script>
+    <script>
+        window.addEventListener('load', () => {
+            document.getElementById('splash').classList.add('no-show');
+            ['hud', 'toggleHUD'].forEach((id) => document.getElementById(id).classList.remove('no-show'));
+        })
+    </script>
 </head>
 <body>
+    
     <div id="home-flex">
         <div id="bureau-container">
             <header id="bureau-header">
