--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         window.addEventListener('load', () => {
             document.getElementById('splash').classList.add('no-show');
-            ['home-flex', 'info'].forEach((id) => document.getElementById(id).classList.remove('no-show'));
+            document.getElementById('home-flex').classList.remove('no-show');
         })
     </script>
 </head>
