--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="ss-equipe main">
+<html lang="fr" class="ss-equipe main loading">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chokokutai&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <script src="./js/scripts.js" type="module" defer></script>
-    
+
     <style>
         #splash {
             position: absolute;
@@ -56,8 +56,7 @@
 
     <script>
         window.addEventListener('load', () => {
-            document.getElementById('splash').classList.add('no-show');
-            document.getElementById('home-flex').classList.remove('no-show');
+            document.documentElement.classList.remove('loading');
         })
     </script>
 
@@ -65,10 +64,10 @@
 <body>
     
     <div id="splash">
-        <div id="splash-content"><span>Loading</span></div>
+        <div id="splash-content"><span>Loading ...</span></div>
     </div>
 
-    <div id="home-flex" class="no-show">
+    <div id="home-flex">
         <div id="bureau-container">
             <header id="bureau-header">
                 <img src="./medias/logo-bureau.svg"/>
@@ -91,7 +90,7 @@
         </div>
     </div>
 
-    <div id="info" class="no-show">
+    <div id="info">
         <div id="info-planning">
             <img id="back-arrow" src="./medias/back.svg"/>
             <div id="ba-tip">
