--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div id="scene-container">
             <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
             <div id="full-screen"><img id="fs-img" src="./medias/fullscreen.svg"/></div>
+            <div id="map" onclick="window.open('./mapinsa/index.html', '_blank')"><img id="map-img" src="./medias/map.svg"/></div>
         </div>
     </div>
 
