--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                     <br>
                     <span class="lato-bold corpus-content">Prépare-toi, fier·e Insaïen·ne. Que ta blouse raconte ton épopée !</span>
                 </div>
+                <div id="blouse-img-container">
+                    <img class="blouse-img" src="./medias/exemple.png"/>
+                    <img id="spec-img" class="blouse-img" src="./medias/blouse1.jpg"/>
+                    <img class="blouse-img" src="./medias/blouse2.jpg"/>
+                </div>
+
             </div>
         </div>
         <div id="info-guide-ppa">
