--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <div id="splash-content"><span>Loading ...</span></div>
     </div>
 
+    <div id="popup" class="no-show"></div>
+
     <div id="home-flex">
         <div id="bureau-container">
             <header id="bureau-header">
