--- a/index.html
+++ b/index.html
@@ -242,5 +242,11 @@
         </div>
     </div>
 
+    <div id="backdrop" class="no-show">
+        <div class="blur">
+            &nbsp;
+        </div>
+    </div>
+
 </body>
 </html>
